examples/error/condition_error.c
void main(){
	float a;
	string s;
	
	s = "test";
	a = 9;

	if (5 + a){		//error
		float b;
	}

	if (5 + a){		//error
			float b;
	}else {
		bool c;
	}

	while(s - 3){	//error

	}

}
